@@ -1,0 +1,8 @@
+let &errorformat="%A%.%#rror reported by parser: %m" 
+let g:variable=1
+
+fu Bar(arg)
+endf
+
+function! Foo(arg)
+endfunction
